[gd_scene load_steps=11 format=3 uid="uid://5spa5amgsxfm"]

[ext_resource type="Script" uid="uid://bada5mi2dlugm" path="res://scripts/hp_bar.gd" id="1_orq1w"]
[ext_resource type="Texture2D" uid="uid://cfus0jnjm26vl" path="res://assets/shield.png" id="2_0hkbf"]
[ext_resource type="Texture2D" uid="uid://ega8yf10nrw" path="res://assets/Fire_symbol.png" id="2_kdpnr"]
[ext_resource type="PackedScene" uid="uid://b5c6pngktpoun" path="res://status_bar.tscn" id="3_76eju"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vgu82"]
bg_color = Color(0.784314, 0.662745, 0.698039, 0.803922)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2wb4"]
bg_color = Color(0.192157, 0.533333, 0.34902, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_tqes5"]
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)
shadow_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq0p4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vx8s"]
bg_color = Color(0.71178, 0.736753, 0.417345, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="LabelSettings" id="LabelSettings_36guj"]
font_size = 34

[node name="HP Bar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1638.0
offset_bottom = -998.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("1_orq1w")

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 270.0
offset_bottom = 40.0
theme_override_styles/background = SubResource("StyleBoxFlat_vgu82")
theme_override_styles/fill = SubResource("StyleBoxFlat_j2wb4")
value = 100.0
show_percentage = false

[node name="HP" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 58.75
offset_top = 43.75
offset_right = 208.75
offset_bottom = 102.75
text = "0 / 0"
label_settings = SubResource("LabelSettings_tqes5")
horizontal_alignment = 1

[node name="CurrentElement" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 3.75
offset_top = -50.0
offset_right = 340.75
offset_bottom = 3.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = " Element : "

[node name="ElementSymbol" type="TextureRect" parent="."]
custom_minimum_size = Vector2(70, 70)
layout_mode = 0
offset_left = 167.5
offset_top = -66.25
offset_right = 237.5
offset_bottom = 3.75
texture = ExtResource("2_kdpnr")
expand_mode = 2

[node name="ShieldBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 11.25
offset_top = 10.0
offset_right = 272.25
offset_bottom = 42.0
theme_override_styles/background = SubResource("StyleBoxFlat_cq0p4")
theme_override_styles/fill = SubResource("StyleBoxFlat_0vx8s")
show_percentage = false

[node name="ShieldLabel" type="Label" parent="."]
z_index = 2
layout_mode = 0
offset_left = -21.25
offset_top = 6.25
offset_right = 24.75
offset_bottom = 58.25
text = "15"
label_settings = SubResource("LabelSettings_36guj")

[node name="Shield" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(-5, 28.75)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_0hkbf")

[node name="Status Bar" parent="." instance=ExtResource("3_76eju")]
layout_mode = 1
offset_left = -12.5
offset_top = 105.0
offset_right = -12.5
offset_bottom = 105.0
